--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
     "sass": "^1.43.5"
   },
   "devDependencies": {
